--- a/RDSystem/MainWindow.xaml
+++ b/RDSystem/MainWindow.xaml
@@ -30,8 +30,11 @@
             <ComboBoxItem>Satellite</ComboBoxItem>
             <ComboBoxItem>Bing Maps</ComboBoxItem>
         </ComboBox>
-        
 
+
+        <Button Content="Start" Name="StartButton" Width="100" Height="40" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="10" Click="StartButton_Click"/>
+        <Button Content="Stop" Name="StopButton" Width="100" Height="40" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="10" Click="StopButton_Click"/>
+        
         <!-- Additional UI elements for controls -->
         <!--<Button Content="Zoom In" HorizontalAlignment="Right" VerticalAlignment="Top" Width="100" 
                 Margin="0,10,10,0" Click="ZoomIn_Click"/>
@@ -54,6 +57,7 @@
                 </StackPanel>
             </Border>
         </Popup>-->
+        
         
     </Grid>
 </Window>
