--- a/RDSystem/MainWindow.xaml
+++ b/RDSystem/MainWindow.xaml
@@ -2,29 +2,27 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:wpf="clr-namespace:GMap.NET.WindowsPresentation;assembly=GMap.NET.WindowsPresentation"
-        Title="RadarFusion Real-Time Tracker" Height="600" Width="1000">
+        Title="RadarFusion: Autonomous Air Surveillance System" Height="600" Width="1000"
+        Icon="C:\WorkArshad\RadarFusion\Repo\RadarFusionSystem\RadarFusion\Images\radarfusion-icon.jpg" >
     <Grid>
-       
+
         <!-- Map Control -->
         <wpf:GMapControl Name="MapControl"
-                         Margin="10,10,10,200"
-                         Zoom="5"
+                         Margin="10,10,10,120"
+                         Zoom="10"
                          HorizontalAlignment="Stretch"
                          VerticalAlignment="Stretch" />
 
         <!-- Data Grid -->
         <DataGrid Name="AircraftDataGrid" AutoGenerateColumns="True" 
-                  Margin="10,400,10,10" IsReadOnly="True" Height="150" />
+                  Margin="10,0,0,10.4" IsReadOnly="True" HorizontalAlignment="Left" VerticalAlignment="Bottom" Width="540" Height="80" />
 
-        <!-- Fetch Data Button -->
-        <Button Content="Fetch Data" HorizontalAlignment="Right" 
-                VerticalAlignment="Top" Margin="165,10" 
-                Width="100" Click="FetchDataButton_Click"/>
+       
 
         <!-- Combobox to select map background -->
         <ComboBox x:Name="MapProviderComboBox" 
-                  HorizontalAlignment="Right" VerticalAlignment="Top" Width="150" 
-                  Margin="10,10,0,0" SelectionChanged="MapProviderComboBox_SelectionChanged">
+                  HorizontalAlignment="Right" VerticalAlignment="Top" Width="131" 
+                  Margin="0,10,18.6,0" SelectionChanged="MapProviderComboBox_SelectionChanged" Height="25">
             <ComboBoxItem>OpenStreetMap</ComboBoxItem>
             <ComboBoxItem>Google Maps</ComboBoxItem>
             <ComboBoxItem>Satellite</ComboBoxItem>
@@ -32,9 +30,14 @@
         </ComboBox>
 
 
-        <Button Content="Start" Name="StartButton" Width="100" Height="40" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="10" Click="StartButton_Click"/>
+        <Button Content="Start" Name="StartButton" Width="100" Height="40" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,0,115,10" Click="StartButton_Click"/>
         <Button Content="Stop" Name="StopButton" Width="100" Height="40" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="10" Click="StopButton_Click"/>
-        
+        <Button x:Name="ButtonClearData" Content="Clear Map" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,220,10" 
+            Width="100" Height="40" Click="ButtonClearData_Click"/>
+        <!-- Fetch Data Button -->
+        <Button x:Name="ButtonFetchData" Content="Fetch Air Objects" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,325,10" 
+                Width="100" Height="40" Click="FetchDataButton_Click" />
+        <Label x:Name="labelData" Content="Live Positions:" HorizontalAlignment="Left" Height="24" Margin="10,0,0,90.4" VerticalAlignment="Bottom" Width="96" RenderTransformOrigin="0.425,-0.417"/>
         <!-- Additional UI elements for controls -->
         <!--<Button Content="Zoom In" HorizontalAlignment="Right" VerticalAlignment="Top" Width="100" 
                 Margin="0,10,10,0" Click="ZoomIn_Click"/>
@@ -44,11 +47,13 @@
         <!--<StackPanel Orientation="Vertical" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,10,10,10">
             <Button Content="Zoom In" Width="75" Click="ZoomIn_Click"/>
             <Button Content="Zoom Out" Width="75" Click="ZoomOut_Click"/>
-            --><!--<Button Content="Show/Hide Objects" Width="75" Click="ToggleObjects_Click"/>
-            <Button Content="Map Layers" Width="75" Click="MapLayers_Click"/>--><!--
+            -->
+        <!--<Button Content="Show/Hide Objects" Width="75" Click="ToggleObjects_Click"/>
+            <Button Content="Map Layers" Width="75" Click="MapLayers_Click"/>-->
+        <!--
         </StackPanel>-->
 
-        
+
         <!--<Popup x:Name="InfoPopup" Placement="Mouse" StaysOpen="False">
             <Border Background="White" BorderBrush="Black" BorderThickness="1">
                 <StackPanel>
@@ -57,7 +62,7 @@
                 </StackPanel>
             </Border>
         </Popup>-->
-        
-        
+
+
     </Grid>
 </Window>
